--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,8 @@
-clean up code?
-break down code into classes and functions for better readability
-make hold/game/next pieces into one canvas?
+when near top, pieces are placing down really fast
+double check game end conditions
+font loading.......
+
+
 
 have separate play style for ai and player
 	player style = holding inputs, auto fall, etc
